Ulk Commit in PHP-Storm.

--- a/w3php002.html
+++ b/w3php002.html
@@ -51,7 +51,7 @@
 
         </script>
 
-        <form id="myform" action="welcome.php" method="post">
+        <form id="myform" action="welcome.php" method="post" onsubmit="return myIncreaseInput()">
 			Name: <input type="text" id="nameform" name="name"><br>
 			E-mail: <input type="text" id="emailform" name="email"><br>
 			Zahl01: <input type="text" id="zahl01form" name="Zahl01"><br>
