--- a/w3php002.html
+++ b/w3php002.html
@@ -17,7 +17,7 @@
               var i = 1;
               i = i + 2;
               i = i + 3;
-              document.getElementById("nameform").value = document.getElementById("nameform").value.trim() + "Quark";
+              //document.getElementById("nameform").value = document.getElementById("nameform").value.trim() + "Quark";
 
           }
 
