nach Batenbankeinrichtung 2. Commit

--- a/w3php002.html
+++ b/w3php002.html
@@ -44,7 +44,9 @@
 	</head>
 	<body>
 
-        <script>
+        <h1> PHPStorm Test004DB </h1>
+
+		<script>
             var myform = document.getElementById("myform");
             myform.addEventListener('submit',function (evt) {
                 var error = true;
